--- a/styles/form-builder-videocarro.scss
+++ b/styles/form-builder-videocarro.scss
@@ -5,7 +5,10 @@
 
 .mw-form-builder{
   .badge-question {
-
+    display: inline-block;
+    vertical-align: middle;
+    white-space: nowrap;
+    text-align: center;
   }
 }
 
