--- a/src/builder/templates/videocarro/mw-form-builder.html
+++ b/src/builder/templates/videocarro/mw-form-builder.html
@@ -3,11 +3,11 @@
         <div class="mw-title-page">
 
             <div class="form-group">
-                <input type="text" class="form-control" name="formName" id="formName" ng-model="ctrl.formData.name" ng-readonly="ctrl.readOnly" placeholder="{{'mwForm.form.name.placeholder'|translate}}" required>
+                <input type="text" class="form-name form-control" name="formName" id="formName" ng-model="ctrl.formData.name" ng-readonly="ctrl.readOnly" placeholder="{{'mwForm.form.name.placeholder'|translate}}" required>
             </div>
 
             <div class="form-group">
-                <textarea msd-elastic class="form-control" name="formDescription" ng-model="ctrl.formData.description" id="formDescription" ng-readonly="ctrl.readOnly"/>
+                <textarea msd-elastic class="form-description form-control" name="formDescription" ng-model="ctrl.formData.description" id="formDescription" placeholder="{{'mwForm.form.description'|translate}}" ng-readonly="ctrl.readOnly"/>
             </div>
         </div>
 
