--- a/src/builder/templates/videocarro/mw-question-offered-answer-list-builder.html
+++ b/src/builder/templates/videocarro/mw-question-offered-answer-list-builder.html
@@ -2,8 +2,7 @@
     <div class="question-offered-answer-list" ng-sortable="ctrl.offeredAnswersSortableConfig" ng-model="ctrl.question.offeredAnswers" role="list">
         <div class="mw-question-offered-answer" ng-repeat="answer in ctrl.question.offeredAnswers" role="listitem">
             <div class="drag-handle" ng-if="!ctrl.readOnly">
-                <i class="fa fa-arrows-v fa-lg handle-inner"></i>
-
+                <i class="fa fa-bars fa-lg handle-inner"></i>
             </div>
             <div class="option-type-indicator">
                 <i ng-if="ctrl.question.type=='radio'" class="fa fa-circle-thin fa-fw"></i>
@@ -22,9 +21,11 @@
                 <i class="fa fa-times"></i>
             </button>
 
+            <!--
             <span ng-if="ctrl.question.pageFlowModifier" class="form-inline">
                  <select ng-options="pageFlow.label|translate:pageFlow for pageFlow in ctrl.possiblePageFlow" ng-model="answer.pageFlow"  class="form-control" ng-disabled="ctrl.readOnly"></select>
             </span>
+            -->
         </div>
 
     </div>
@@ -32,16 +33,18 @@
         <div class="drag-handle">
         </div>
         <div class="option-type-indicator">
-            <i ng-if="ctrl.question.type=='radio'" class="fa fa-circle-thin fa-fw"></i>
-            <i ng-if="ctrl.question.type=='checkbox'" class="fa fa-square-o fa-fw"></i>
+            <i ng-if="ctrl.question.type=='radio'" class="fa fa-plus fa-fw"></i>
+            <i ng-if="ctrl.question.type=='checkbox'" class="fa fa-plus fa-fw"></i>
         </div>
         <span ng-click="ctrl.addNewOfferedAnswer()" role="button">
             <input type="text" class="form-control  offered-answer-value" value="{{'mwForm.question.buttons.addOption'|translate}}">
         </span>
+        <!--
         <span class="add-custom-answer"  ng-if="!ctrl.disableOtherAnswer && !ctrl.question.otherAnswer">
             <span translate="mwForm.question.orLabel">lub </span>
             <button role="button" ng-click="ctrl.addCustomAnswer()" translate="mwForm.question.buttons.addOther">Dodaj "Inne"</button>
         </span>
+        -->
     </div>
     <div class="mw-question-offered-answer custom-answer" ng-if="ctrl.question.otherAnswer">
         <div class="drag-handle"  ng-if="!ctrl.readOnly">
