--- a/src/builder/templates/videocarro/mw-form-question-builder.html
+++ b/src/builder/templates/videocarro/mw-form-question-builder.html
@@ -111,7 +111,7 @@
         </div>
         <div class="mw-preview" ng-if="ctrl.isPreview">
             <div class="mw-question-text">
-                <span class="badge badge-question">{{ctrl.orderNo}}</span>
+                <span class="badge-question">{{ctrl.orderNo}}</span>
                 {{ctrl.question.text}} <span ng-if="ctrl.question.required">*</span>
             </div>
             <div class="question-answers" ng-switch="ctrl.question.type">
