--- a/src/builder/templates/videocarro/mw-form-question-builder.html
+++ b/src/builder/templates/videocarro/mw-form-question-builder.html
@@ -112,7 +112,7 @@
         <div class="mw-preview" ng-if="ctrl.isPreview">
             <div class="mw-question-text">
                 <span class="badge-question">{{ctrl.orderNo}}</span>
-                {{ctrl.question.text}} <span ng-if="ctrl.question.required">*</span>
+                <span class="text">{{ctrl.question.text}}</span> <span ng-if="ctrl.question.required">*</span>
             </div>
             <div class="question-answers" ng-switch="ctrl.question.type">
                 <div ng-switch-when="text">
