--- a/src/viewer/templates/videocarro/mw-form-viewer-content.html
+++ b/src/viewer/templates/videocarro/mw-form-viewer-content.html
@@ -1,5 +1,13 @@
 <div class="mw-form-viewer-content">
-        <h1 class="form-title">{{ctrl.formData.name}}</h1>
+
+        <div class="mw-form-viewer-header" >
+            <h1 class="form-title">{{ctrl.formData.name}}</h1>
+            <div class="mw-form-description">
+                {{ctrl.formData.description}}
+            </div>
+        </div>
+
+        <!--
         <div class="mw-title-page" ng-if="!ctrl.currentPage && !ctrl.formSubmitted">
 
             <div class="mw-form-description">
@@ -8,6 +16,7 @@
 
             <button type="button"  class="btn btn-default begin-response-button" ng-click="ctrl.beginResponse()" translate="mwForm.buttons.begin">Rozpocznij</button>
         </div>
+        -->
 
         <div class="mw-form-page" ng-if="ctrl.currentPage">
             <h2 class="mw-page-title" ng-if="ctrl.currentPage.namedPage && ctrl.currentPage.name">{{ctrl.currentPage.name}}</h2>
