--- a/src/viewer/templates/videocarro/mw-form-viewer-content.html
+++ b/src/viewer/templates/videocarro/mw-form-viewer-content.html
@@ -49,5 +49,5 @@
     <button type="button" ng-disabled="ctrl.form.$invalid" ng-if="ctrl.buttons.nextPage.visible" class="btn btn-default next-page-button" ng-click="ctrl.goToNextPage()"><span translate="mwForm.buttons.next">Dalej</span> <i class="fa fa-chevron-right"></i></button>
 
     <span class="action-text" ng-if="ctrl.buttons.submitForm.visible && !ctrl.readOnly">Ao finaliza o questionário, clique aqui: </span>
-    <button type="submit" ng-disabled="ctrl.options.disableSubmit || ctrl.form.$invalid" ng-if="ctrl.buttons.submitForm.visible && !ctrl.readOnly" class="btn btn-default next-page-button" ng-click="ctrl.submitForm()"> <span translate="mwForm.buttons.submit">Submit</span></button>
+    <button type="submit" ng-disabled="ctrl.options.disableSubmit || ctrl.form.$invalid" ng-if="ctrl.buttons.submitForm.visible && !ctrl.readOnly" class="btn btn-white next-page-button" ng-click="ctrl.submitForm()"> <span translate="mwForm.buttons.submit">Submit</span></button>
 </div>
